--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -9,7 +9,7 @@ WORKDIR /code
 
 # Install app dependencies and install
 COPY ./requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install --no-cache-dir --default-timeout=100 --upgrade -r /code/requirements.txt
 
 # Download and install 3rd party libs (TODO - include in requirements once published instead)
 # NOTE - as docker caches this step will need to change dockerfile when updated to clear cache
@@ -20,4 +20,4 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ./app /code/app
 
 # Run app
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
