--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==3.0.3
 MarkupSafe==2.1.0
 mypy-extensions==0.4.3
 numpy==1.22.3
+opencdms==0.1.0
 pandas==1.4.1
 pathspec==0.9.0
 platformdirs==2.5.1
