--- a/.github/docker-build.yml
+++ b/.github/docker-build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - run: echo "Building ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:${{github.sha}}"
+      - run: echo "Building docker image ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:${{github.sha}}"
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
