--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,17 +17,23 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - run: echo "Building docker image ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:${{github.sha}}"
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo
+      - run: echo ${{steps.meta.outputs.tags}},${{ steps.meta.outputs.labels }}
       - name: Build
         uses: docker/build-push-action@v2
         with:
           context: .
           push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:${{github.sha}}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:buildcache,mode=max
