--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,7 +27,10 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo
-      - run: echo ${{steps.meta.outputs.tags}},${{ steps.meta.outputs.labels }}
+      - run: |
+          echo ${{steps.meta.outputs.tags}}
+          echo ${{steps.meta.outputs.labels}}
+
       - name: Build
         uses: docker/build-push-action@v2
         with:
