--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,9 +27,9 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo
-      - run: |
-          echo "${{steps.meta.outputs.tags}}"
-          echo "${{steps.meta.outputs.labels}}"
+
+      - run: echo "${{steps.meta.outputs.tags}}"
+      - run: echo "${{steps.meta.outputs.labels}}"
 
       - name: Build
         uses: docker/build-push-action@v2
@@ -38,5 +38,5 @@ jobs:
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/opencdms-components-server-demo:buildcache,mode=max
+          cache-from: type=gha, scope=${{ github.workflow }}
+          cache-to: type=gha, scope=${{ github.workflow }}
