--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,44 @@
+alembic==1.6.5
 anyio==3.5.0
 asgiref==3.5.0
 autopep8==1.6.0
+backports.zoneinfo==0.2.1
 black==22.1.0
 cffi==1.15.0
 click==8.0.4
 colorama==0.4.4
+Faker==13.3.2
 fastapi==0.74.1
+greenlet==1.1.2
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
+inflect==5.4.0
 Jinja2==3.0.3
+Mako==1.2.0
 MarkupSafe==2.1.0
 mypy-extensions==0.4.3
+mysqlclient==2.0.3
 numpy==1.22.3
-opencdms==0.1.0
-pandas==1.4.1
+opencdms@git+https://github.com/opencdms/pyopencdms.git@main
+pandas==1.3.5
 pathspec==0.9.0
 platformdirs==2.5.1
+psycopg2==2.9.3
 pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.9.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
+python-editor==1.0.4
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 rpy2==3.4.5
 six==1.16.0
 sniffio==1.2.0
+sqlacodegen==2.3.0
+SQLAlchemy==1.4.32
 starlette==0.17.1
 toml==0.10.2
 tomli==2.0.1
@@ -37,3 +48,4 @@ tzlocal==4.1
 uvicorn==0.17.5
 watchgod==0.7
 websockets==10.2
+wheel
