--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -33,11 +33,16 @@ jobs:
         with:
           images: idems/opencdms-components-api
 
+      # convert base_64 credentials
+      - run: echo "GCP_SA_KEY=$($GCP_SA_KEY_B64 | base64 --decode)" >> $GITHUB_ENV
+        with:
+          GCP_SA_KEY_B64: ${{secrets.GCP_SA_KEY_B64}}
+
       # authenticate to google cloud
       - id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: "${{ secrets.GCP_SA_KEY_B64 | base64 --decode }}"
+          credentials_json: ${{env.GCP_SA_KEY}}
 
       - name: Build
         uses: docker/build-push-action@v2
