--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -38,6 +38,8 @@ jobs:
         env:
           GCP_SA_KEY_B64: ${{secrets.GCP_SA_KEY_B64}}
 
+      - run: echo $(${{env.GCP_SA_KEY}} | cut -c1-8 )
+
       # authenticate to google cloud
       - id: "auth"
         uses: "google-github-actions/auth@v0"
