--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -34,17 +34,15 @@ jobs:
           images: idems/opencdms-components-api
 
       # convert base_64 credentials
-      - run: echo "GCP_SA_KEY=$(echo $GCP_SA_KEY_B64 | base64 --decode)" >> $GITHUB_ENV
+      - run: echo $GCP_SA_KEY_B64 | base64 --decode >> credentials.json
         env:
           GCP_SA_KEY_B64: ${{secrets.GCP_SA_KEY_B64}}
-
-      - run: echo $(${{env.GCP_SA_KEY}} | cut -c1-8 )
 
       # authenticate to google cloud
       - id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: ${{env.GCP_SA_KEY}}
+          credentials_json: credentials.json
 
       - name: Build
         uses: docker/build-push-action@v2
