--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - id: "auth"
         uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: credentials.json
+          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
 
       - name: Build
         uses: docker/build-push-action@v2
