--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -33,21 +33,33 @@ jobs:
         with:
           images: idems/opencdms-components-api
 
-      # authenticate to google cloud
-      - id: "auth"
-        uses: "google-github-actions/auth@v0"
+      - name: Setup Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
+          project_id: ${{ env.PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
+          export_default_credentials: true # Set to true to authenticate the Cloud Run action
+
+      - name: Authorize Docker push
+        run: gcloud auth configure-docker
 
       - name: Build
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
+          push: false
           tags: ${{env.IMAGE_NAME}}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
 
-      - name: Deploy Docker image
-        run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed
+      - name: Push Container
+        run: docker push $IMAGE_NAME
+
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
+          service: ${{ env.SERVICE }}
+          image: ${{ env.IMAGE_NAME }}
+          region: ${{ env.REGION }}
