--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -35,11 +35,12 @@ jobs:
 
       # authenticate to google cloud
       # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
-      # - id: "auth"
-      #   uses: "google-github-actions/auth@v0"
-      #   with:
-      #     credentials_json: ${{secrets.GCP_SA_KEY_B64}}
-      #     token_format: "access_token"
+
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
+        with:
+          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
+          token_format: "access_token"
 
       # - name: Setup Cloud SDK
       #   uses: google-github-actions/setup-gcloud@v0
@@ -51,13 +52,19 @@ jobs:
       # - name: Authorize Docker push
       #   run: gcloud auth configure-docker
 
+      # Authenticate to google cloud
+      # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
       # https://github.com/docker/login-action#service-account-based-authentication
       - name: Login to GCR
         uses: docker/login-action@v1
         with:
           registry: gcr.io
-          username: _json_key_base64
-          password: ${{ secrets.GCP_SA_KEY_B64 }}
+          username: "oauth2accesstoken"
+          password: "${{ steps.auth.outputs.access_token }}"
+
+       # This example runs "docker login" directly to Container Registry.
+    - run: |
+        echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://gcr.io
 
       - name: Build
         uses: docker/build-push-action@v2
