--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   SERVICE: opencdms-components-api
   REGION: europe-west1
-  IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT }}/opencdms-components-api
+  IMAGE_NAME: ${{ secrets.GCP_PROJECT }}/opencdms-components-api
 
 jobs:
   deploy:
@@ -42,28 +42,21 @@ jobs:
           credentials_json: ${{secrets.GCP_SA_KEY_B64}}
           token_format: "access_token"
 
-      # - name: Setup Cloud SDK
-      #   uses: google-github-actions/setup-gcloud@v0
-      #   # with:
-      #   #   project_id: ${{ env.PROJECT_ID }}
-      #   #   service_account_key: ${{ secrets.GCP_SA_KEY_B64 }}
-      #   #   export_default_credentials: true  # Set to true to authenticate the Cloud Run action
       # - name: Authorize Docker push
       #   run: gcloud auth configure-docker
       # Authenticate to google cloud
       # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
-      # https://github.com/docker/login-action#service-account-based-authentication
+      # https://github.com/docker/login-action#google-container-registry-gcr
       - name: Login to GCR
         uses: docker/login-action@v1
         with:
-          registry: gcr.io
+          registry: "${{env.REGION}}-docker.pkg.dev"
           username: "oauth2accesstoken"
           password: "${{ steps.auth.outputs.access_token }}"
 
-        # This example runs "docker login" directly to Container Registry.
+      # This example runs "docker login" directly to Artifact Registry.
       - run: |
-          echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://gcr.io
-
+          echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://${{env.REGION}}-docker.pkg.dev
       - name: Build
         uses: docker/build-push-action@v2
         with:
