--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{env.IMAGE_NAME}}
+          tags: ${{env.REGION}}-docker.pkg.dev/${{env.IMAGE_NAME}}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
