--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -35,6 +35,7 @@ jobs:
 
       # authenticate to google cloud
       # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
+      # https://cloud.google.com/artifact-registry/docs/access-control
 
       - id: "auth"
         uses: "google-github-actions/auth@v0"
@@ -47,6 +48,7 @@ jobs:
       # Authenticate to google cloud
       # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
       # https://github.com/docker/login-action#google-container-registry-gcr
+
       - name: Login to GCR
         uses: docker/login-action@v1
         with:
@@ -62,7 +64,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{env.REGION}}-docker.pkg.dev/${{env.IMAGE_NAME}}
+          tags:
+            - ${{env.REGION}}-docker.pkg.dev/${{env.IMAGE_NAME}}:${{  github.sha }}
           # labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
@@ -72,5 +75,5 @@ jobs:
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.SERVICE }}
-          image: ${{ env.IMAGE_NAME }}
+          image: ${{ env.IMAGE_NAME }}:${{  github.sha }}
           region: ${{ env.REGION }}
