--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -7,13 +7,14 @@ on:
       - feat/deploy-gh-action
 env:
   REGISTRY: europe-west1-docker.pkg.dev
-  REGISTRY_PATH: ${{ secrets.GCP_PROJECT }}/opencdms-components-api
-  GCP_REGION: europe-west1
-  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
-  SERVICE_NAME: opencdms-components-api
-  SERVICE: opencdms-components-api
+
   REGION: europe-west1
-  IMAGE_NAME: ${{ secrets.GCP_PROJECT }}/opencdms-components-api
+
+  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
+
+  SERVICE_NAME: opencdms-components-api
+
+  REGISTRY_PATH: ${{ secrets.GCP_PROJECT }}/opencdms-components-api
 
 jobs:
   deploy:
@@ -30,6 +31,44 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to GCR
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: _json_key_base64
+          password: ${{ secrets.GCP_SA_KEY_B64 }}
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.REGISTRY_PATH }}/${{ env.SERVICE_NAME }}
+
+      - name: Build
+        id: build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha, scope=${{ github.workflow }}
+          cache-to: type=gha, scope=${{ github.workflow }}, mode=max
+
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
+          service: ${{ env.SERVICE_NAME }}
+          image: ${{ env.REGISTRY }}/${{ env.REGISTRY_PATH }}
+          region: ${{ env.REGION }}
+
+      - name: Show Output
+        run: echo ${{ steps.deploy.outputs.url }}
+
       # - name: Login to DockerHub
       #   uses: docker/login-action@v1
       #   with:
@@ -61,39 +100,3 @@ jobs:
       # This example runs "docker login" directly to Artifact Registry.
       # - run: |
       #     echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://${{env.REGION}}-docker.pkg.dev
-
-      - name: Login to GCR
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: _json_key_base64
-          password: ${{ secrets.GCP_SA_KEY_B64 }}
-
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.REGISTRY_PATH }}/${{ env.SERVICE_NAME }}
-
-      - name: Build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha, scope=${{ github.workflow }}
-          cache-to: type=gha, scope=${{ github.workflow }}, mode=max
-
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0
-        with:
-          service: ${{ env.SERVICE }}
-          image: ${{ env.IMAGE_NAME }}:${{  github.sha }}
-          region: ${{ env.REGION }}
-
-      - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
