--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -31,6 +31,9 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+        # TODO - could gcloud auth and pass as token
+
       - name: Login to GCR
         uses: docker/login-action@v1
         with:
@@ -57,6 +60,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
+
+        # authenticate to google cloud
+      # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
+      # https://cloud.google.com/artifact-registry/docs/access-control
+
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
+        with:
+          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
+          token_format: "access_token"
 
       - name: Deploy to Cloud Run
         id: deploy
