--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -61,7 +61,7 @@ jobs:
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
 
-        # authenticate to google cloud
+      # authenticate to google cloud
       # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
       # https://cloud.google.com/artifact-registry/docs/access-control
 
@@ -71,12 +71,16 @@ jobs:
           credentials_json: ${{secrets.GCP_SA_KEY_B64}}
           token_format: "access_token"
 
+      # Deploy to google cloud
+      # https://cloud.google.com/run/docs/reference/iam/roles#additional-configuration
+      # requires additional "service account user" and "cloud run admin" roles
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.SERVICE_NAME }}
-          image: ${{ env.REGISTRY }}/${{ env.REGISTRY_PATH }}
+          # https://githubhot.com/repo/docker/build-push-action/issues/554
+          image: ${{ fromJSON(steps.build.outputs.Metadata.image.name)['image.name']}}
           region: ${{ env.REGION }}
 
       - name: Show Output
