--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -32,6 +32,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      # Authenticate to google cloud with service account
+      # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
+      # https://cloud.google.com/artifact-registry/docs/access-control
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
+        with:
+          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
+          token_format: "access_token"
+
         # TODO - could gcloud auth and pass as token
 
       - name: Login to GCR
@@ -60,16 +69,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}, mode=max
-
-      # authenticate to google cloud
-      # https://github.com/google-github-actions/auth#authenticating-via-service-account-key-json
-      # https://cloud.google.com/artifact-registry/docs/access-control
-
-      - id: "auth"
-        uses: "google-github-actions/auth@v0"
-        with:
-          credentials_json: ${{secrets.GCP_SA_KEY_B64}}
-          token_format: "access_token"
 
       # Deploy to google cloud
       # https://cloud.google.com/run/docs/reference/iam/roles#additional-configuration
